src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Stage_Pearson_Activities__c</fullName>
        <formula>CASE(StageName, 
&quot;1 - Prospecting&quot;,&quot;Identify key stakeholders within target account. Research the account, contact, competition. Gain access to stakeholder. Demonstrate why they would invest time in the sales call.&quot;,
&quot;2 - Qualification&quot;,&quot;Use structured questions to uncover organisational pain. Categorise stakeholder types (economic, user, technical, coach). Satisfy BANT.&quot;,
&quot;3 - Needs Analysis&quot;,&quot;Exploring and evaluating options. Gaining customer commitment to design a solution. Re-evaluating with customer stakeholders and engaging with newly identified stakeholders (often technical).&quot;,
&quot;4 - Solutioning&quot;,&quot;Specify solution. Conduct a Pearson internal review to ensure rights/permissions availability. Create draft P&amp;L and present opportunity to Pearson stakeholders for approval (at threshold level). Define pricing, benefits, value proposition. Discuss implementation plan and measurements for success.&quot;,
&quot;5 - Proposal&quot;,&quot;Prepare customer proposal. Check customer comprehension of the proposal. Provide further support/information to the customer to allow them to prepare the business case for sign off. Refine and amend proposal if required. Attach proposal(s) in Salesforce under the opportunity.&quot;,
&quot;6 - Renewal Confirmation&quot;,&quot;Reconfirm likely # units, production time, delivery address, availability of pack components etc. Go to 10 - In Production upon confirmation. Go to 3 - Needs Analysis if the customer wishes to change the product.&quot;,
&quot;7 - Negotiation&quot;,&quot;Address customer queries. Overcome objections. Amend proposal if appropriate. Confirm the agreed solution.&quot;,
&quot;8 - Won (Verbal Agreement)&quot;,&quot;If via bookshop go to 10 - In Production. If Institutional Purchase go to Stage 9 - Contract.&quot;,
&quot;9 - Contract&quot;,&quot;Negotiate contract terms, reach agreement, obtain signature. Attach counter-signed agreement in Salesforce.&quot;,
&quot;10 - In Production&quot;,&quot;Build solution within specified timeframe. Adjust opportunity value as required.&quot;,
&quot;11 - Invoiced&quot;,&quot;Create correct invoice, verify that customer has received it. Execute implementation plan.&quot;,
&quot;12 - Lost&quot;,&quot;Record loss reason in Salesforce. Provide feedback to the company. Record relevant information (proposal, contact, requirements etc). Decide when to re-engage.&quot;,
&quot;Unknown&quot;)</formula>
        <label>Stage Pearson Activities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>CORE - Status field is used to define the status of the opportunity</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Schedule</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <description>The following field is used by the sales rep to identify the strategy for closing on an opportunity.</description>
        <label>Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Student_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically updated field as part of the sales process, once the status is successfully moved to &quot;Negotiation&quot; (ie registration criteria are met</description>
        <label>Student Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summer__c</fullName>
        <description>This field identifies how many Summer enrollments are related to the University Course this Opportunity originated from.</description>
        <label>Summer</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>University_Name__c</fullName>
        <formula>Account.University__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>University</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Forecast</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UserForecast__c.User__c</field>
                <operation>equals</operation>
                <valueField>$Source.Learning_Solutions_Manager__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UserForecast__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a &quot;cancelled&quot; opportunity post closure. This would typically occur if an amendment is made to the original contract, the original opportunity becomes &quot;void&quot;.</description>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Source__c</fullName>
        <description>This field is used to identifies a web-generated lead&apos;s source and captures it on the opportunity it is converted into</description>
        <label>Web Source</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MGI Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weighted_Amount__c</fullName>
        <description>Opportunity Amount x Probability of opportunity closure</description>
        <formula>Amount  * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Winter__c</fullName>
        <description>This field identifies how many Winter enrollments are related to the University Course this Opportunity originated from.</description>
        <label>Winter</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3PL__c</fullName>
        <description>The following field identifies which 3rd Party Integrator the Opportunity may be associated to</description>
        <label>3PL</label>
        <picklist>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlackBoard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brainhoney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CourseCompass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desire2Learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCollege</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LearningStudio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moodle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moodlerooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sakai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebCt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isConvertedFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that opportunity is created a result of lead conversion.</description>
        <label>isConvertedFromLead</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Geography__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Market__c</columns>
        <columns>Academic_Vetting_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.B2B</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_US_HE_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Selling_Account__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>Digital_Indicator__c</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.B2B</value>
        </filters>
        <label>All US HE Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Bedforview_Opportunities</fullName>
        <booleanFilter>1 AND ((2) OR (4 AND 3))</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Qualification_Campus__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.D2L</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
            <value>CTI Bedfordview Campus</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Preferred_Campus__c</field>
            <operation>equals</operation>
            <value>Bedfordview</value>
        </filters>
        <label>CTIMGI Bedfordview Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Bloemfontein_Opportunities</fullName>
        <booleanFilter>1 AND ((2) OR (4 AND 3)) AND 5 AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Qualification_Campus__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.D2L</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
            <value>CTI Bloemfontein Campus</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Preferred_Campus__c</field>
            <operation>equals</operation>
            <value>Bloemfontein</value>
        </filters>
        <filters>
            <field>Student_Registered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>CTIMGI Bloemfontein Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Cape_Town_Opportunities</fullName>
        <booleanFilter>1 AND ((2) OR (4 AND 3)) AND 5 AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Qualification_Campus__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.D2L</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
            <value>CTI Cape Town Campus</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Preferred_Campus__c</field>
            <operation>equals</operation>
            <value>Cape Town</value>
        </filters>
        <filters>
            <field>Student_Registered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>CTIMGI Cape Town Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Durban_Opportunities</fullName>
        <booleanFilter>1 AND ((2) OR (4 AND 3)) AND 5 AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Qualification_Campus__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.D2L</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
            <value>CTI Durban Campus</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Preferred_Campus__c</field>
            <operation>equals</operation>
            <value>Durban</value>
        </filters>
        <filters>
            <field>Student_Registered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>CTIMGI Durban Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Durbanville_Opportunities</fullName>
        <booleanFilter>1 AND ((2) OR (4 AND 3)) AND 5 AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Qualification_Campus__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.D2L</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
            <value>CTI Durbanville Campus</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Preferred_Campus__c</field>
            <operation>equals</operation>
            <value>Durbanville</value>
        </filters>
        <filters>
            <field>Student_Registered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>CTIMGI Durbanville Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_East_London_Opportunities</fullName>
        <booleanFilter>1 AND ((2) OR (4 AND 3)) AND 5 AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Qualification_Campus__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.D2L</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
            <value>CTI East London Campus</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Preferred_Campus__c</field>
            <operation>equals</operation>
            <value>East London</value>
        </filters>
        <filters>
            <field>Student_Registered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>CTIMGI East London Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Midrand_Opportunities</fullName>
        <booleanFilter>1 AND ((2) OR (4 AND 3)) AND 5 AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Qualification_Campus__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.D2L</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
            <value>MGI Midrand Campus</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Preferred_Campus__c</field>
            <operation>equals</operation>
            <value>Midrand</value>
        </filters>
        <filters>
            <field>Student_Registered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>CTIMGI Midrand Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Nelspruit_Opportunities</fullName>
        <booleanFilter>1 AND ((2) OR (4 AND 3)) AND 5 AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Qualification_Campus__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.D2L</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
            <value>CTI Nelspruit Campus</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Preferred_Campus__c</field>
            <operation>equals</operation>
            <value>Nelspruit</value>
        </filters>
        <filters>
            <field>Student_Registered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>CTIMGI Nelspruit Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Port_Elizabeth_Opportunities</fullName>
        <booleanFilter>1 AND ((2) OR (4 AND 3)) AND 5 AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Qualification_Campus__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.D2L</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
            <value>CTI Port Elizabeth Campus</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Preferred_Campus__c</field>
            <operation>equals</operation>
            <value>Port Elizabeth</value>
        </filters>
        <filters>
            <field>Student_Registered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>CTIMGI Port Elizabeth Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Potchefstroom_Opportunities</fullName>
        <booleanFilter>1 AND ((2) OR (4 AND 3)) AND 5 AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Qualification_Campus__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.D2L</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
            <value>CTI Potchefstroom Campus</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Preferred_Campus__c</field>
            <operation>equals</operation>
            <value>Potchefstroom</value>
        </filters>
        <filters>
            <field>Student_Registered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>CTIMGI Potchefstroom Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Pretoria_Opportunities</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Owner_Role__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Qualification_Campus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.D2L</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
            <value>CTI Pretoria Campus</value>
        </filters>
        <filters>
            <field>Qualification_Campus__c</field>
            <operation>equals</operation>
            <value>MGI Pretoria Campus</value>
        </filters>
        <label>CTIMGI Pretoria Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Randburg_Opportunities</fullName>
        <booleanFilter>1 AND ((2) OR (4 AND 3)) AND 5 AND 6</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Qualification_Campus__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.D2L</value>
        </filters>
        <filters>
            <field>Campus__c</field>
            <operation>equals</operation>
            <value>CTI Randburg Campus</value>
        </filters>
        <filters>
            <field>Campus__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Preferred_Campus__c</field>
            <operation>equals</operation>
            <value>Randburg</value>
        </filters>
        <filters>
            <field>Student_Registered__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.TYPE</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>CTIMGI Randburg Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>B2B</fullName>
        <active>true</active>
        <businessProcess>US HE</businessProcess>
        <label>B2B</label>
    </recordTypes>
    <recordTypes>
        <fullName>D2L</fullName>
        <active>true</active>
        <businessProcess>CTIMGI</businessProcess>
        <label>D2L</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity</fullName>
        <active>true</active>
        <businessProcess>CORE Sales Process</businessProcess>
        <description>CORE Opportunity</description>
        <label>Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Closed_Lost_Reason_Required</fullName>
        <active>true</active>
        <description>This rule requires that a Lost Reason is identified when the Opportunity sales stage is set to &quot;Lost&quot;</description>
        <errorConditionFormula>AND( 
$RecordType.Name!=&quot;Opportunity&quot;, NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c),
AND(ISPICKVAL(Lost_Reason__c, &quot;&quot;),OR(ISPICKVAL(StageName , &apos;Lost&apos;),ISPICKVAL(StageName , &apos;Closed Lost&apos;))) )</errorConditionFormula>
        <errorMessage>Please ensure you have identified a Lost reason when setting the Opportunity&apos;s sales stage to &quot;Lost&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Competitor_Product_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Competitor_Product_Count__c == 0,  ISPICKVAL(StageName , &apos;Lost&apos;), RecordType.DeveloperName == &apos;B2B&apos;) &amp;&amp; !$Setup.Bypass_Settings__c.Disable_Validation_Rules__c</errorConditionFormula>
        <errorMessage>Add a competitor product before setting the stage to Lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Value</fullName>
        <active>false</active>
        <description>To populate Loan value</description>
        <errorConditionFormula>and($RecordType.Name=&quot;D2L&quot;,ISPICKVAL(Loan_Status__c, &quot;Approved&quot;), ISNULL(Loan_Value__c))&amp;&amp; (NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c )&amp;&amp; $RecordType.Name!=$Label.ANZ_Opportunity_Record_Type)</errorConditionFormula>
        <errorMessage>Please Enter Valid Loan Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Value_Reject</fullName>
        <active>false</active>
        <description>To populate Loan value</description>
        <errorConditionFormula>and($RecordType.Name=&quot;D2L&quot;,or(ISPICKVAL(Loan_Status__c, &quot;Rejected&quot;),ISPICKVAL(Loan_Status__c, &quot;&quot;)) , OR(NOT(ISBLANK(Loan_Value__c )),NOT(ISBLANK( Institution_Approved__c))))&amp;&amp;( NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c &amp;&amp; $RecordType.Name!=$Label.ANZ_Opportunity_Record_Type))</errorConditionFormula>
        <errorMessage>Loan value should enter when LoanStatus=Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lost_Reason_Other</fullName>
        <active>true</active>
        <description>To populate Lost Reason other</description>
        <errorConditionFormula>AND($RecordType.Name=&quot;D2L&quot;,ISPICKVAL( Lost_Reason__c ,&apos;other&apos;),ISBLANK( Lost_Reason_Other__c ))&amp;&amp; (NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c )&amp;&amp; $RecordType.Name!=$Label.ANZ_Opportunity_Record_Type)</errorConditionFormula>
        <errorMessage>Please populate Lost Reason other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Closed_Renewal</fullName>
        <active>false</active>
        <description>CORE - When an opportunity is Closed the renewal date must be populated.</description>
        <errorConditionFormula>IF($Profile.Name = &apos;System Administrator&apos;,
	false,
	IsClosed &amp;&amp; ISBLANK(Renewal_Date__c)
)</errorConditionFormula>
        <errorDisplayField>Renewal_Date__c</errorDisplayField>
        <errorMessage>When an opportunity is Closed you must enter in the Renewal Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Closed_reengage</fullName>
        <active>false</active>
        <description>CORE - When an opportunity is Closed the re-engagement date must be populated.</description>
        <errorConditionFormula>IF($Profile.Name = &apos;System Administrator&apos;,
	false,
	IsClosed &amp;&amp; ISBLANK( Re_engagement_Date__c )
)</errorConditionFormula>
        <errorDisplayField>Re_engagement_Date__c</errorDisplayField>
        <errorMessage>When an opportunity is Closed you must enter in the Re-engagement Date.</errorMessage>
    </validationRules>
</CustomObject>